examples/opa-gatekeeper/deny_latest_tags.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sImageTag
metadata:
  name: deny-latest-tags
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-system", "gatekeeper-system"]
  parameters:
    tag: latest
