examples/opa-gatekeeper/ns_require_env_labels.yaml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: ns-require-env-labels
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
    excludedNamespaces: ["default", "kube-*", "gatekeeper-system"]
  parameters:
    labels: ["purpose"]
