examples/opa-gatekeeper/require_ns_labels.yaml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: require-ns-labels
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
    excludedNamespaces: ["default", "kube-*", "gatekeeper-system"]
  parameters:
    labels: ["owner", "env"]
